# FusionSolarPy

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  requirements.txt  setup.cfg  signals.md
.github/workflows/: deploy.yaml  test.yaml
fusion_solar/: client.py
fusion_solar_py/: exceptions.py
models/: captcha_huawei.onnx
src/fusion_solar_py/: captcha_solver.py  captcha_solver_onnx.py  captcha_solver_tf.py  client.py  ctc_decoder.py  encryption.py  exceptions.py  interfaces.py
tests/: test_client.py  test_onnx.py  test_readme.py
