[metadata]
name = fusion_solar_py
version = 0.0.28
author = Walzen Group
author_email = info@walzen.org
description = A simply API to the Huawei Fusion Solar web interface with anti-captcha
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Walzen-Group/FusionSolarPy
project_urls =
    Bug Tracker = https://github.com/Walzen-Group/FusionSolarPy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    requests>=2.31.0
    opencv_python>=4.8.0.76
    numpy>=1.24.3
    beautifulsoup4>=4.12.2
    onnxruntime-gpu>=1.14

[options.packages.find]
where = src
