[metadata]
name = fusion_solar_py
version = 0.0.26
author = Johannes Griss
author_email = johannes.griss@meduniwien.ac.at
description = A simply API to the Huawei Fusion Solar web interface.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jgriss/FusionSolarPy
project_urls =
    Bug Tracker = https://github.com/jgriss/FusionSolarPy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    requests>=2.31.0
    cryptography

[options.extras_require]
captcha =
    beautifulsoup4>=4.12.2
    numpy<2.0.0
    opencv_python>=4.8.0.76
    onnxruntime>=1.14

[options.packages.find]
where = src
